--- a/src/components/BlogComponents/BlogCardContainer.css
+++ b/src/components/BlogComponents/BlogCardContainer.css
@@ -5,6 +5,8 @@
   background-color: #fff;
   list-style: none;
   margin: 20px 10px;
+  padding-bottom: 1em;
+  position: relative;
 }
 
 /* Manipulate the blog image */
@@ -42,4 +44,20 @@
   text-align: right;
   font-size: 12px;
   color: rgb(155, 155, 155);
+}
+
+.BlogCardContainer button {
+  background-color: rgb(255, 131, 131);
+  border: none;
+  color: #fff;
+  padding: 0.25em 1em;
+  position: absolute;
+  bottom: 0.5em;
+  left: 2em;
+  cursor: pointer;
+}
+
+.BlogCardContainer button:hover {
+  transition: 0.1s background-color ease;
+  background-color: rgb(255, 96, 96);
 }
