--- a/src/components/BlogFormComponent/BlogFormRoute.css
+++ b/src/components/BlogFormComponent/BlogFormRoute.css
@@ -1,6 +1,6 @@
 .BlogFormRoute {
   margin: 0 2em;
-  margin-top: 5em;
+  margin-top: 6em;
 }
 
 .BlogFormRoute * {
@@ -39,4 +39,11 @@
 .BlogFormRoute button:hover {
   transition: 0.05s background-color ease;
   background-color: rgb(63, 208, 201);
+}
+
+@media only screen and (min-width: 700px) {
+  .BlogFormRoute {
+    margin: 0 15%;
+    margin-top: 6em;
+  }
 }
