--- a/src/components/ContactComponent/ContactRoute.css
+++ b/src/components/ContactComponent/ContactRoute.css
@@ -1,7 +1,12 @@
 .ContactRoute {
-  margin: 5em 2em;
+  margin: 5em 20%;
 }
 
 .ContactRoute h3 {
-  margin-top: 5em;
+  margin-top: 4em;
+}
+
+.ContactRoute p {
+  margin-top: 0.75em;
+  margin-left: 0.5em;
 }
