--- a/src/components/BlogComponents/BlogCardContainer.css
+++ b/src/components/BlogComponents/BlogCardContainer.css
@@ -52,7 +52,7 @@
   color: #fff;
   padding: 0.25em 1em;
   position: absolute;
-  bottom: 0.5em;
+  bottom: 1.5em;
   left: 2em;
   cursor: pointer;
 }
@@ -60,4 +60,12 @@
 .BlogCardContainer button:hover {
   transition: 0.1s background-color ease;
   background-color: rgb(255, 96, 96);
+}
+
+.BlogCardContainer ul {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  margin-top: 0;
+  padding-bottom: 2em;
 }
