--- a/src/components/BlogComponents/BlogDetailsRoute.css
+++ b/src/components/BlogComponents/BlogDetailsRoute.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin: 0.5em 0;
 }
 
 .BlogDetailsRoute .title-and-date-container * {
@@ -19,6 +20,20 @@
 .BlogDetailsRoute .title-and-date-container p {
   font-size: 16px;
   width: 150px;
+}
+
+.BlogDetailsRoute .link-container {
+  display: inline;
+}
+
+.BlogDetailsRoute .user-link {
+  color: #666;
+  margin: 2em;
+  text-align: right;
+}
+
+.BlogDetailsRoute .user-link p {
+  margin: 0 0.75em;
 }
 
 .BlogDetailsRoute .body-text * {
